# librarian

./: .gitignore  .yamllint  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  merge-dependabot.yml  release.yml
src/: main.rs
src/config/: mod.rs  tests.rs
src/error/: mod.rs  tests.rs
src/fs_notify/: fanotify_notifier.rs  inotify.rs  mod.rs  notify_notifier.rs  tests_supported_os.rs  tests_unsupported_os.rs
src/mime_type/: mod.rs  tests.rs
src/template/: mod.rs  tests.rs
tests/configs/: bad-missing-directories.toml  good-windows.toml  good.toml
tests/files/text/: pdf
tests/tmp/: .placeholder
