[package]
name = "librarian"
version = "0.1.0"
authors = ["Jason Rogena <jason@rogena.me>"]
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.138"
serde_derive = "1.0.138"
toml = "0.5.9"
regex = "1"
tree_magic = "0.2.3"
tera = "1"
clap = { version = "3.2", features = ["derive"] }
exitcode = "1.1.2"
notify = "4.0.16"
ttl_cache = "0.5.1"
