[package]
name = "fs-librarian"
version = "0.3.3"
authors = ["Jason Rogena <null+fs-librarian@rogena.me>"]
edition = "2021"
rust-version = "1.61"
readme = "README.md"
license-file = "LICENSE"
documentation = "https://github.com/jasonrogena/librarian/blob/main/README.md"
description = "Librarian runs pre-configured commands against a group of files that match a set of filters"
homepage = "https://github.com/jasonrogena/librarian"
repository = "https://github.com/jasonrogena/librarian"
keywords = ["directory", "file", "file-manager", "organiser", "organizer"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
    "tests/files/*",
    "tests/configs/bad-*",
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.156"
serde_derive = "1.0.156"
toml = "0.5.11"
regex = "1"
tree_magic = "0.2.3"
tera = "1"
clap = { version = "4.1", features = ["derive"] }
exitcode = "1.1.2"
notify = "4.0.16"
ttl_cache = "0.5.1"
